--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,17 @@
 services:
   wordpress:
     image: wordpress:latest
+    ports:
       - "8080:80" # (O el puerto que quieras tiene que ser uno que no tengas pillado)
     environment:
       WORDPRESS_DB_HOST: ${WORDPRESS_DB_HOST} # Estas variables tienes que meterlas en la sección de variables de entorno
       WORDPRESS_DB_USER: ${WORDPRESS_DB_USER}
       WORDPRESS_DB_PASSWORD: ${WORDPRESS_DB_PASSWORD}
       WORDPRESS_DB_NAME: ${WORDPRESS_DB_NAME}
-      volumes:
-          ./wp-content/themes/mauswp:/var/www/html/wp-content/themes/mauswp
-          wp_content:/var/www/html/wp-content
-      depends_on:
+    volumes:
+      - ./wp-content/themes/mauswp:/var/www/html/wp-content/themes/mauswp
+      - wp_content:/var/www/html/wp-content
+    depends_on:
       - db
 
   db:
@@ -31,8 +32,8 @@ services:
       - "8081:80"
     environment:
       PMA_HOST: db
-      PMA_USER: ${MYSQL_USER}
-      PMA_PASSWORD: ${MYSQL_PASSWORD}
+      PMA_USER: ${WORDPRESS_DB_USER}
+      PMA_PASSWORD: ${WORDPRESS_DB_PASSWORD}
 
 volumes:
   db_data:
