--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,21 +2,78 @@ services:
   wordpress:
     image: wordpress:latest
     ports:
-      - "8080:80" # (O el puerto que quieras tiene que ser uno que no tengas pillado)
+      - "8080:80"
     environment:
-      WORDPRESS_DB_HOST: ${WORDPRESS_DB_HOST} # Estas variables tienes que meterlas en la sección de variables de entorno
+      WORDPRESS_DB_HOST: ${WORDPRESS_DB_HOST}
       WORDPRESS_DB_USER: ${WORDPRESS_DB_USER}
       WORDPRESS_DB_PASSWORD: ${WORDPRESS_DB_PASSWORD}
       WORDPRESS_DB_NAME: ${WORDPRESS_DB_NAME}
+      # Recomendado en contenedores para instalar idiomas/plugins/updates sin FTP
+      WORDPRESS_CONFIG_EXTRA: |
+        define('FS_METHOD', 'direct');
     volumes:
-      - ./wp-content:/var/www/html/wp-content
+      - wp_content:/var/www/html/wp-content
     depends_on:
       - db
     networks:
       - wpnet
 
+  # Sidecar: sincroniza el theme mauswp dentro del volumen wp_content
+  theme_sync:
+    image: alpine/git:2.45.2
+    restart: unless-stopped
+    environment:
+      THEME_DIR: /data/themes/mauswp
+      GIT_BRANCH: main
+      MAUSWP_GIT_URL: ${MAUSWP_GIT_URL}
+      # Si quieres forzar siempre el estado exacto de main, pon SYNC_MODE=force
+      SYNC_MODE: ${SYNC_MODE:-pull}
+      SYNC_INTERVAL: ${SYNC_INTERVAL:-300} # segundos
+    volumes:
+      - wp_content:/data
+    command: >
+      sh -lc '
+        set -eu;
+
+        mkdir -p /data/{plugins,themes,uploads,mu-plugins,languages,upgrade};
+
+        # Función de sync
+        sync_repo() {
+          if [ ! -d "$THEME_DIR/.git" ]; then
+            rm -rf "$THEME_DIR";
+            git clone --depth 1 --branch "$GIT_BRANCH" "$MAUSWP_GIT_URL" "$THEME_DIR";
+          else
+            cd "$THEME_DIR";
+            git fetch --depth 1 origin "$GIT_BRANCH";
+            if [ "${SYNC_MODE}" = "force" ]; then
+              git reset --hard "origin/$GIT_BRANCH";
+              git clean -fd;
+            else
+              git pull --ff-only origin "$GIT_BRANCH";
+            fi
+          fi
+        }
+
+        # Primer sync
+        sync_repo;
+
+        # Permisos típicos (alineados con wordpress:apache -> www-data uid 33)
+        chown -R 33:33 /data;
+
+        # Loop
+        while true; do
+          sleep "$SYNC_INTERVAL";
+          sync_repo || true;
+          chown -R 33:33 /data || true;
+        done
+      '
+    depends_on:
+      - wordpress
+    networks:
+      - wpnet
+
   db:
-    image: mysql:8.0 #(Lo mismo que lo anterior)
+    image: mysql:8.0
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: ${WORDPRESS_DB_NAME}
@@ -42,6 +99,7 @@ services:
 
 volumes:
   db_data:
+  wp_content:
 
 networks:
   wpnet:
