--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,58 +20,16 @@ services:
   theme_sync:
     image: alpine/git:2.45.2
     restart: unless-stopped
-
-    # IMPORTANTE: evita que el contenedor trate el command como "git <args>"
     entrypoint: ["/bin/sh", "-lc"]
-
     environment:
       THEME_DIR: /data/themes/mauswp
-      GIT_BRANCH: main
+      GIT_BRANCH: "main"
+      SYNC_MODE: "pull"        # pull | force
+      SYNC_INTERVAL: "300"     # segundos
       MAUSWP_GIT_URL: ${MAUSWP_GIT_URL}
-      SYNC_MODE: ${SYNC_MODE:-pull}       # pull | force
-      SYNC_INTERVAL: ${SYNC_INTERVAL:-300} # segundos
-
     volumes:
       - wp_content:/data
-
-    command: |
-      set -eu
-
-      mkdir -p /data/{plugins,themes,uploads,mu-plugins,languages,upgrade}
-
-      sync_repo() {
-        if [ -z "${MAUSWP_GIT_URL:-}" ]; then
-          echo "ERROR: MAUSWP_GIT_URL no está definida"
-          exit 1
-        fi
-
-        if [ ! -d "$THEME_DIR/.git" ]; then
-          rm -rf "$THEME_DIR"
-          git clone --depth 1 --branch "$GIT_BRANCH" "$MAUSWP_GIT_URL" "$THEME_DIR"
-        else
-          cd "$THEME_DIR"
-          git fetch --depth 1 origin "$GIT_BRANCH"
-
-          if [ "${SYNC_MODE}" = "force" ]; then
-            git reset --hard "origin/$GIT_BRANCH"
-            git clean -fd
-          else
-            git pull --ff-only origin "$GIT_BRANCH"
-          fi
-        fi
-      }
-
-      sync_repo
-
-      # Permisos típicos para wordpress:apache (www-data suele ser uid/gid 33)
-      chown -R 33:33 /data || true
-
-      while true; do
-        sleep "$SYNC_INTERVAL"
-        sync_repo || true
-        chown -R 33:33 /data || true
-      done
-
+    command: "set -eu; mkdir -p /data/plugins /data/themes /data/uploads /data/mu-plugins /data/languages /data/upgrade; if [ -z \"${MAUSWP_GIT_URL:-}\" ]; then echo \"ERROR: MAUSWP_GIT_URL no está definida\"; exit 1; fi; if [ ! -d \"$THEME_DIR/.git\" ]; then rm -rf \"$THEME_DIR\"; git clone --depth 1 --branch \"$GIT_BRANCH\" \"$MAUSWP_GIT_URL\" \"$THEME_DIR\"; else cd \"$THEME_DIR\"; git fetch --depth 1 origin \"$GIT_BRANCH\"; if [ \"$SYNC_MODE\" = \"force\" ]; then git reset --hard \"origin/$GIT_BRANCH\"; git clean -fd; else git pull --ff-only origin \"$GIT_BRANCH\"; fi; fi; chown -R 33:33 /data || true; while true; do sleep \"$SYNC_INTERVAL\"; if [ -d \"$THEME_DIR/.git\" ]; then cd \"$THEME_DIR\"; git fetch --depth 1 origin \"$GIT_BRANCH\"; if [ \"$SYNC_MODE\" = \"force\" ]; then git reset --hard \"origin/$GIT_BRANCH\"; git clean -fd; else git pull --ff-only origin \"$GIT_BRANCH\"; fi; else rm -rf \"$THEME_DIR\"; git clone --depth 1 --branch \"$GIT_BRANCH\" \"$MAUSWP_GIT_URL\" \"$THEME_DIR\"; fi; chown -R 33:33 /data || true; done"
     depends_on:
       - wordpress
     networks:
